...
                  urlLinkKey: 'more_tab.privacy_policy_link',
                ),
              ],
            ),
            spacerWidget,
            YiviThemedButton(
              key: const Key('log_out_button'),
              style: YiviButtonStyle.filled,
              label: 'more_tab.log_out',
              onPressed: () {
                IrmaRepositoryProvider.of(context).lock();
                widget.onChangeTab(IrmaNavBarTab.data);
              },
...
