...
  final String? instruction;
  final bool enabled;
  final void Function(BuildContext, EnterPinState)? listener;
  final WidgetVisibility Function(BuildContext, EnterPinState)? submitButtonVisibilityListener;

  YiviPinScreen({
    Key key = const Key('pin_screen'),
    this.scaffoldKey,
    this.instructionKey,
    this.instruction,
    required this.pinBloc,
    required this.maxPinSize,
    required this.onSubmit,
...
